// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test Logo component Logo component is created and rendered correctly for Footer 1`] = `
<div
  className="logo"
>
  <a
    className="logo__link logo__link--light"
  >
    <span
      className="logo__letter logo__letter--1"
    >
      W
    </span>
    <span
      className="logo__letter logo__letter--2"
    >
      T
    </span>
    <span
      className="logo__letter logo__letter--3"
    >
      W
    </span>
  </a>
</div>
`;

exports[`Test Logo component Logo component is created and rendered correctly for Header 1`] = `
<div
  className="logo"
>
  <a
    className="logo__link"
  >
    <span
      className="logo__letter logo__letter--1"
    >
      W
    </span>
    <span
      className="logo__letter logo__letter--2"
    >
      T
    </span>
    <span
      className="logo__letter logo__letter--3"
    >
      W
    </span>
  </a>
</div>
`;
